--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
-        "illuminate/support": "5.6.*|5.7.*|5.8.*|^6.0|^7.0"
+        "php": ">=7.1.0 || >=7.2.5",
+        "illuminate/support": "5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0 || ^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.8.0",
-        "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~8.0"
+        "orchestra/testbench": "^3.1 || ^4.0 || ^5.0 || ^6.0",
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0"
     },
     "autoload": {
         "psr-4": {
