--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,14 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0 || >=7.2.5",
-        "illuminate/support": "5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0 || ^8.0"
+        "php": "^8.1",
+        "illuminate/support": "^9.0 || ^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.1 || ^4.0 || ^5.0 || ^6.0",
+        "orchestra/testbench": "^7.0 || ^8.0",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0"
+        "phpunit/phpunit": "^9.0 || ^10.0",
+        "laravel/pint": "^1.8"
     },
     "autoload": {
         "psr-4": {
@@ -40,6 +41,11 @@
                 "TheRobFonz\\SecurityHeaders\\Providers\\SecurityHeadersServiceProvider"
             ]
         }
+    },
+    "scripts": {
+        "check-style": "./vendor/bin/pint --test",
+        "fix-style": "./vendor/bin/pint",
+        "test": "./vendor/bin/phpunit"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
